--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ python-dotenv==1.0.1
 requests==2.31.0
 eth-account==0.11.0
 eth-typing==4.0.0
-eth-utils==2.3.1 
+eth-utils==2.3.1
+setuptools>=65.5.1 
